--- a/Tareas/tarea-clase-6/tarea-clase-6.html
+++ b/Tareas/tarea-clase-6/tarea-clase-6.html
@@ -7,21 +7,28 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>Learn CSS</h1>
+    <main>
+        <article>
+            <h1>Learn CSS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quod quibusdam ut vitae, tempora doloremque veniam qui vel doloribus,<span>sit eveniet.</span> dicta cum ab quidem numquam. Officia facere dignissimos fugit veritatis atque?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis consectetur repellat distinctio,<span>sit eveniet.</span> iste mollitia repudiandae quam vitae sapiente? Sequi esse harum rerum eaque possimus accusamus nam voluptates velit voluptatum ex. Lorem, ipsum dolor <span>sit eveniet.</span> sit amet consectetur adipisicing elit. Earum, laborum iste nobis quibusdam, cupiditate perferendis accusantium alias tempore provident atque tempora, hic nulla libero praesentium itaque omnis quisquam. Minus, voluptatum.</p>
+            
+            <a>See More</a>
+        </article>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quod quibusdam ut vitae, tempora doloremque veniam qui vel doloribus,<span>sit eveniet.</span> dicta cum ab quidem numquam. Officia facere dignissimos fugit veritatis atque?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis consectetur repellat distinctio,<span>sit eveniet.</span> iste mollitia repudiandae quam vitae sapiente? Sequi esse harum rerum eaque possimus accusamus nam voluptates velit voluptatum ex. Lorem, ipsum dolor <span>sit eveniet.</span> sit amet consectetur adipisicing elit. Earum, laborum iste nobis quibusdam, cupiditate perferendis accusantium alias tempore provident atque tempora, hic nulla libero praesentium itaque omnis quisquam. Minus, voluptatum.</p>
+        <article>
+            <h2>Selectors</h2>
 
-    <h3>See More</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime ullam similique voluptate, officia debitis odit numquam <span>sit eveniet.</span> facilis magni ut rem recusandae ipsam vel dicta fugit expedita doloremque incidunt aliquam consequuntur.</p>
 
-    <h2>Selectors</h2>
+            <a>See More</a>
+        </article>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime ullam similique voluptate, officia debitis odit numquam <span>sit eveniet.</span> facilis magni ut rem recusandae ipsam vel dicta fugit expedita doloremque incidunt aliquam consequuntur.</p>
+        <article>
+            <h2>Properties</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure excepturi minus eius hic iusto ducimus, <span>sit eveniet.</span> error quibusdam qui rerum asperiores. Veritatis, ex excepturi laborum dolores totam similique cum dignissimos quibusdam.</p>
 
-    <h3>See More</h3>
-
-    <h2>Properties</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure excepturi minus eius hic iusto ducimus, <span>sit eveniet.</span> error quibusdam qui rerum asperiores. Veritatis, ex excepturi laborum dolores totam similique cum dignissimos quibusdam.</p>
-
-    <h3>See More</h3>
+            <a>See More</a>
+        </article>
+    </main>
 </body>
 </html>
