--- a/Clase11/index.html
+++ b/Clase11/index.html
@@ -7,16 +7,31 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <header>
+        <h2>Brand Name</h2>
+        <nav>
+            <a href="" class="link">Link</a>
+            <a href="" class="link">Link</a>
+            <a href="" class="link">Link</a>
+            <a href="" class="link">Link</a>
+        </nav>
+        <button class="btn-nav">
+            <i class="bi bi-list"></i>
+        </button>
+    </header>
     <div class="padre">
         <div class="hijo">
             
         </div>
-            <div class="hijo">
+        <div class="hijo">
                 
         </div>
         <div class="hijo">
 
         </div>
     </div>
+    <button class="link-wsp">
+        <i class="bi bi-whatsapp"></i>
+    </button>
 </body>
 </html>
