--- a/Clase11/mobile-first/index.html
+++ b/Clase11/mobile-first/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+    <header class="header-container">
+        <p class="style-p-header">HOSTINGER</p>
+        <i class="bi bi-list"></i>
+    </header>
     <section class="section section-darker section-gap-normal">
         <h2>
             Migración de sitios web simplificada.
@@ -27,20 +30,20 @@
             </article>
             <article class="card-article card-article-dark">
                 <div class="card-article-icon">
-                    <i class="bi bi-list-ul"></i>
+                    <i class="bi bi-lightning-charge"></i>
                 </div>
-                <h3>3 simples pasos</h3>
+                <h3>Rápido y seguro</h3>
                 <p class="text text-aling-left">
-                    Solo tenés que elegir tu plan, completar el formulario de solicitud de migración y enviarlo. Eso es todo.
+                    El 95% de las webs migran en menos de 20 minutos. El 5% restante, más rápido que el promedio del sector. Además, tu sitio web sigue activo todo el tiempo.
                 </p>
             </article>
             <article class="card-article card-article-dark">
                 <div class="card-article-icon">
-                    <i class="bi bi-list-ul"></i>
+                    <i class="bi bi-check-circle"></i>
                 </div>
-                <h3>3 simples pasos</h3>
+                <h3>Gratis</h3>
                 <p class="text text-aling-left">
-                    Solo tenés que elegir tu plan, completar el formulario de solicitud de migración y enviarlo. Eso es todo.
+                    No importa si tenés una web o 100, migrarlas a Hostinger es gratis con todos nuestros planes.
                 </p>
             </article>
         </div>
