--- a/Tareas/tarea-clase-12/Hostinguer-mediaquery/index.html
+++ b/Tareas/tarea-clase-12/Hostinguer-mediaquery/index.html
@@ -18,17 +18,19 @@
         <img src="./images/hostinger-img.jpeg" alt="img-hostinger" class="img-host">
     </section>
     <section>
-        <div class="container-texto">
-            <h2>JUAN VILLALVA</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
-        </div>
-        <div class="container-texto">
-            <h2>JUAN VILLALVA</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
-        </div>
-        <div class="container-texto">
-            <h2>JUAN VILLALVA</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+        <div class="cont-text">
+            <div class="container-texto">
+                <h2>JUAN VILLALVA</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+            </div>
+            <div class="container-texto">
+                <h2>JUAN VILLALVA</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+            </div>
+            <div class="container-texto">
+                <h2>JUAN VILLALVA</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+            </div>
         </div>
     </section>
 </body>
