--- a/Tareas/tarea-clase-12/Hostinguer-mediaquery/index.html
+++ b/Tareas/tarea-clase-12/Hostinguer-mediaquery/index.html
@@ -7,31 +7,50 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <section class="container-section">
-        <h1>Mantene tu sitio seguro en todo momento</h1>
-        <ul class="container-ul">
-            <li class="text-color">Obtene certificados de seguridad SSL ilimitados para cifrar el trafico de tus sitios web.</li>
-            <li class="text-color">Protege tu pagina web de ataques DDoS con nameservers protegidos por Cloudfiare.</li>
-            <li class="text-color">Protege tus archivos con copias de seguridad automaticas.</li>
-            <li class="text-color">Asegurate de que tu pagina web este siempre online con nuestra garantia de tiempo de actividad del 99,9%.</li>
-        </ul>
-        <img src="./images/hostinger-img.jpeg" alt="img-hostinger" class="img-host">
-    </section>
-    <section>
-        <div class="cont-text">
-            <div class="container-texto">
-                <h2>JUAN VILLALVA</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+    <section class="section bg-primary sitio-seguro">
+        <section class="section-cabecera">
+            <div class="section-contenedor">
+                <h2 class="subtitulo-secondary">Mantene tu sitio seguro en todo momento</h2>
+                <ul class="lista">
+                    <li class="text-secondary"><i class="bi bi-check-lg"></i>Obtene certificados de seguridad SSL ilimitados para cifrar el trafico de tus sitios web.</li>
+                    <li class="text-secondary"><i class="bi bi-check-lg"></i>Protege tu pagina web de ataques DDoS con nameservers protegidos por Cloudfiare.</li>
+                    <li class="text-secondary"><i class="bi bi-check-lg"></i>Protege tus archivos con copias de seguridad automaticas.</li>
+                    <li class="text-secondary"><i class="bi bi-check-lg"></i>Asegurate de que tu pagina web este siempre online con nuestra garantia de tiempo de actividad del 99,9%.</li>
+                </ul>
             </div>
-            <div class="container-texto">
-                <h2>JUAN VILLALVA</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+            <div class="container-img">
+                <img src="./images/chica-hostinger.png" alt="Chica de Hostinger">
             </div>
-            <div class="container-texto">
-                <h2>JUAN VILLALVA</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet enim ratione cumque voluptatem temporibus inventore corrupti. Quidem adipisci recusandae, omnis quibusdam cum a enim odit, voluptates veniam, illo nihil!</p>
+        </section>
+        <section class="reseñas-contenedor">
+            <div class="caja-reseña bg-primary-bold">
+                <div class="container-texto">
+                    <img src="./images/juan-villalvaz.png" alt="Juan Villalvazo LOGO">
+                    <p class="text-secondary">La mejor ventaja es que Hostinger incluye tecnologías predeterminadas como SSL. En el pasado tuve problemas para configurar dichas tecnologías en mis sitios web, no con Hostinger.</p>
+                        <a href="#">
+                            <i class="bi bi-chevron-right"></i>
+                        </a>
+                </div>
             </div>
-        </div>
+            <div class="caja-reseña bg-primary-bold">
+                <div class="container-texto">
+                    <img src="./images/soydalto.png" alt="Soy Dalto logo">
+                    <p class="text-secondary">Las herramientas que considero más útiles son la Protección DDoS y el escaneo de vulnerabilidades que proporciona informes detallados para ayudar a solucionarlas.</p>
+                    <a href="#">
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="caja-reseña bg-primary-bold">
+                <div class="container-texto">
+                    <img src="./images/roxana-falasco.png" alt="Roxana Falasco logo">
+                    <p class="text-secondary">Me encanta el nivel de seguridad que le ofrece hostinger a mis sitios web. La facilidad de instalación de SSL gratis. Sin cargos anuales y alta seguridad para siempre!</p>
+                    <a href="#">
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 </html>
