Tarea terminada Clase 20 js

--- a/Tareas/tarea-clase-20-js/index.html
+++ b/Tareas/tarea-clase-20-js/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header class="container-header">
+        <div class="container-text">
+            <h1 class="space-h1">Headline</h1>
+            <span class="style-span-header">Label text or value</span>
+            <p>A descriptive body text comes here</p>
+        </div>
+        <div class="container-btns">
+            <button class="pointer"><i class="bi bi-trash3 icon"></i>Delete</button>
+            <button class="pointer"><i class="bi bi-filter icon"></i>Filters</button>
+            <button class="container-export pointer"><i class="bi bi-cloud-download icon"></i>Export</button>
+            <button class="container-add pointer"><i class="bi bi-plus-lg icon"></i>Add New CTA</button>
+        </div>
+    </header>
     <div id="nombre-columnas" class="container-columnas"></div>
     
     <div id="registros" class="container-registros"></div>
